<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/titanium_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainMenu">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/moon_silver"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/titanium_black"
            android:gravity="center"
            android:shadowColor="@color/deep_teal"
            android:shadowDx="6"
            android:shadowDy="10"
            android:shadowRadius="1.5"
            android:text="@string/app_title"
            android:textColor="@color/titanium_white"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/titanium_black"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.quanlycongviecapp.Customview.SquareButton
                android:id="@+id/btnPriority"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_priority"
                android:text="@string/btn_priority"
                android:textSize="0sp" />

            <TextView
                android:id="@+id/txtPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_priority"
                android:textColor="@color/titanium_natural"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.quanlycongviecapp.Customview.SquareButton
                android:id="@+id/btnProfile"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_profile"
                android:text="@string/btn_profile"
                android:textSize="0sp" />

            <TextView
                android:id="@+id/txtProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_profile"
                android:textColor="@color/titanium_natural"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Add -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.quanlycongviecapp.Customview.SquareButton
                android:id="@+id/btnAdd"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_add"
                android:text="@string/btn_add"
                android:textSize="0sp" />

            <TextView
                android:id="@+id/txtAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_add"
                android:textColor="@color/titanium_natural"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.quanlycongviecapp.Customview.SquareButton
                android:id="@+id/btnTask"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_task"
                android:text="@string/btn_task"
                android:textSize="0sp" />

            <TextView
                android:id="@+id/txtTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/txt_task"
                android:textColor="@color/titanium_natural"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTask"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_background"
                android:contentDescription="@string/rv_task"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPriority"
                android:layout_width="0dp"
                android:background="@drawable/ic_background"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/rv_priority"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_background"
                android:contentDescription="@string/rv_add"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_background"
                android:contentDescription="@string/rv_profile"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center">

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>